force-app/main/default/objects/Call_to_Action__c/Call_to_Action__c.object-meta.xml
<CustomObject>
    <label>Call to Action</label>
    <nameField>
        <displayFormat>CTA-{0000}</displayFormat>
        <label>Call to Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calls to Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>