force-app/main/default/objects/Call_to_Action__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Calls to Action</relationshipLabel>
    <relationshipName>Calls_to_Action</relationshipName>
    <type>Lookup</type>
</CustomField>