force-app/main/default/objects/Call_to_Action__c/fields/of_CTA_s_Taken__c.field-meta.xml
<CustomField>
    <fullName>of_CTA_s_Taken__c</fullName>
    <inlineHelpText>If the Call to Action is related to a Blackthorn Event, please leave blank. A running nightly automation will update this #.

If adding a Call to Action to an Event Campaign, please estimate # of CTA&apos;s taken at the event.</inlineHelpText>
    <label># of CTA&apos;s Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>