force-app/main/default/objects/Call_to_Action__c/fields/Related_CTA_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_CTA_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related Call to Action campaign that was asked of event attendees.</inlineHelpText>
    <label>Related CTA Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Calls to Action</relationshipLabel>
    <relationshipName>Calls_to_Action</relationshipName>
    <type>Lookup</type>
</CustomField>