force-app/main/default/objects/Call_to_Action__c/fields/Related_Event_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Event Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Calls to Action (Related Event Campaign)</relationshipLabel>
    <relationshipName>Calls_to_Action1</relationshipName>
    <type>Lookup</type>
</CustomField>